fix: make caner tile Java 8 compatible